[package]
name = "libewon"
version = "0.1.0"
authors = ["François de Mareschal <francois.de-mareschal@outlook.fr>"]
edition = "2021"
repository = "https://gitlab.com/francois-de-mareschal/libewon"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0"
